# badprocess-guard

./: CMakeLists.txt  README.md  badprocess-guard-blueprint.md  process-mapping.ini
.github/workflows/: cmake-windows.yml
packaging/: badprocess-guard.desktop
resources/: resources.qrc
src/: alertwindow.cpp  alertwindow.h  configuration.cpp  configuration.h  main.cpp  processentrywidget.cpp  processentrywidget.h  processmonitor.cpp  processmonitor.h  settingsdialog.cpp  settingsdialog.h
